--- a/Resources/Private/Less/ModuleFile.less
+++ b/Resources/Private/Less/ModuleFile.less
@@ -11,6 +11,7 @@
 
     &__row {
         align-items: center;
+        background: var(--typo3-surface-container-high);
         display: flex;
         flex-wrap: wrap;
     }
